# sqlx-postgresql-schemas

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20230123142428_create_memo.sql  20230123144849_create_secret_schema.sql  20230123150742_add_test_data.sql
src/: main.rs
