[package]
name = "sqlx-postgresql-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "json", "offline"] }
tokio = { version = "1.24.2", features = ["full"] }
